# CEMA

./: .gitignore  CMakeLists.txt  EdgeListGraph.h  LinearHeap.h  MBitSet.h  README.md  cliques.cpp  cliques.h  get_mxclq.cpp  get_mxclq.h  ilp.cpp  ilp.h  main.cpp  run_d_experiments.py  run_k_experiments.py  utils.cpp  utils.h
data/DIMACS-10/: bio-diseasome  ca-AstroPh  ca-CSphd  ca-CondMat  ca-GrQc  ca-HepPh  ca-netscience  ia-email-EU  ia-email-univ  ia-enron-large  ia-enron-only  ia-fb-messages  ia-infect-dublin  ia-infect-hyper  ia-reality  rec-amazon  rt-retweet  rt-twitter-copen  scc_enron-only  scc_fb-forum  scc_infect-dublin  scc_infect-hyper  scc_retweet  scc_retweet-crawl  scc_rt_alwefaq  scc_rt_assad  scc_rt_bahrain  scc_rt_damascus  scc_rt_dash  scc_rt_gmanews  scc_rt_gop  scc_rt_http  scc_rt_israel  scc_rt_ksa  scc_rt_lebanon  scc_rt_libya  scc_rt_lolgop  scc_rt_mittromney  scc_rt_obama  scc_rt_occupy  (+24 more)
data/ER_1/: ER_n100_p10.gr  ER_n100_p20.gr  ER_n100_p30.gr  ER_n100_p40.gr  ER_n100_p50.gr  ER_n100_p60.gr  ER_n100_p70.gr  ER_n100_p80.gr  ER_n100_p90.gr  ER_n100_p95.gr  ER_n25_p10.gr  ER_n25_p20.gr  ER_n25_p30.gr  ER_n25_p40.gr  ER_n25_p50.gr  ER_n25_p60.gr  ER_n25_p70.gr  ER_n25_p80.gr  ER_n25_p90.gr  ER_n25_p95.gr  ER_n50_p10.gr  ER_n50_p20.gr  ER_n50_p30.gr  ER_n50_p40.gr  ER_n50_p50.gr  ER_n50_p60.gr  ER_n50_p70.gr  ER_n50_p80.gr  ER_n50_p90.gr  ER_n50_p95.gr  ER_n75_p10.gr  ER_n75_p20.gr  ER_n75_p30.gr  ER_n75_p40.gr  ER_n75_p50.gr  ER_n75_p60.gr  ER_n75_p70.gr  ER_n75_p80.gr  ER_n75_p90.gr  ER_n75_p95.gr
results/: BILEVEL-D10-k.xlsx  D10-d-NO-EXTRA.xlsx  D10-d-NO-REDUCTION.xlsx  D10-d-NO-UB.xlsx  D10-d.xlsx  D10-k.xlsx  D2-k.xlsx  ER-summary.xlsx  LB with different method.xlsx  Reduction_all_instances.xlsx  comp_binary.xlsx  initial cliques with different method.xlsx
(+160 files in other folders)
